AIML Cleanup 2