@@ -1,5 +1,6 @@
 #!/bin/bash
 
-[ -e .env ] && PATH="$PWD:$PATH" builtin command . .env
-exec java -Xverify:none  -cp "./lib/Ab.jar:./lib/deps.jar:./lib/" Main "$@"
+[ -e .env ] && \
+eval "$( sed -s -r -e ':a s~^[^ =]\ ([^ =]+)~\1~; ta; s~ *= *~=~; s~^([a-zA-Z0-9_]+)=~export \1=~; s~^([^=]+)=([^=]+)$~\1="\2"~; ' ./.env; )"
+python3 ./main.py
 
